Legger til støtte for oppdatering og historikk uten å bruke entiteter